add logo-eng and design system init

--- a/style-guide.html
+++ b/style-guide.html
@@ -31,7 +31,7 @@
 
     <section class="bg-image-03 center dark overlay padding">
       <div class="margin-bottom margin-top max-width-m">
-        <h1>Style Guide</h1>
+        <h1>Design System</h1>
         <p class="lead">This is the central location of all components.</p>
       </div>
     </section>
@@ -42,6 +42,7 @@
           <aside class="sidebar">
             <h6 class="sidebar-header">Components</h6>
             <ul class="blank">
+              <li><a href="#logo">Logo</a></li>
               <li><a href="#classes">Classes</a></li>
               <li><a href="#grid">Grid</a></li>
               <li><a href="#colors">Colors</a></li>
@@ -57,6 +58,70 @@
           </aside>
         </div>
         <div class="col-four-fifths">
+
+          <section id="logo">
+            <h4>Logo</h4>
+            <p class="paragraph">
+              <img class="right rounded" src="media/content/logo-370x370.png" srcset="media/content/logo-370x370.png 1x, media/content/logo@2x.png 2x" alt="Sketch">
+              University Motto and Seal 
+              
+              “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhism College's official motto 
+              and translates as “The Fruition of Holy Path Surpasses All.” 
+              
+              <!-- The motto is part of the university seal? -->
+            </p>
+            <div class="divider"></div>
+            <table>
+              <tr>
+                <th>Alignment</th>
+                <th>Description</th>
+              </tr>
+              <tr>
+                <td>.center</td>
+                <td>Add this class to center content.</td>
+              </tr>
+              <tr>
+                <td>.center-mobile</td>
+                <td>Center content on mobile devices only.</td>
+              </tr>
+              <tr>
+                <td>.center-tablet</td>
+                <td>Center content on tablets and mobile devices.</td>
+              </tr>
+              <tr>
+                <td>.middle</td>
+                <td>Align content vertically when height is unknown.</td>
+              </tr>
+            </table>
+            <div class="divider"></div>
+            <table>
+              <tr>
+                <th>Backgrounds</th>
+                <th>Description</th>
+              </tr>
+              <tr>
+                <td>.bg-dark</td>
+                <td>Solid background where "dark" can be replaced with "light", "primary"...</td>
+              </tr>
+              <tr>
+                <td>.bg-gradient-blue</td>
+                <td>Gradient background where "blue" can be replaced with "cyan", "green"...</td>
+              </tr>
+              <tr>
+                <td>.bg-image-01</td>
+                <td>Image-based backgrounds where "01" can be replaced with "02", "03"...</td>
+              </tr>
+              <tr>
+                <td>.bg-pattern-01</td>
+                <td>Pattern-based backgrounds with SVG where "01" can be replaced with "02", "03"...</td>
+              </tr>
+              <tr>
+                <td>.overlay</td>
+                <td>Adds an overlay with opacity on top of image-based backgrounds.</td>
+              </tr>
+            </table>
+
+          </section>
 
           <section id="classes">
             <h4>Classes</h4>
