create default-template, add Academics page

--- a/academics.html
+++ b/academics.html
@@ -21,8 +21,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="style-guide.html">Style Guide</a></li>
         <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li>
-        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Sign Up</a></li>
+        <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
+        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a></li>
       </ul>
     </nav>
   </header>
@@ -34,8 +34,8 @@
         <div class="col-one-half bg-image-02 overlay"></div>
         <div class="col-one-half middle padding">
           <div class="max-width-m">
-            <h1>Free Forever</h1>
-            <p class="lead">New accounts get one month trial of our paid plans.</p>
+            <h1>Academics</h1>
+            <p class="lead">Two-Year Degree Program</p>
             <a href="signup.html" class="button button-secondary full-width-tablet space-top" role="button">Sign Up</a>
           </div>
         </div>
@@ -106,7 +106,7 @@
             <li><a href="#">Resources</a></li>
             <li><a href="#">Design</a></li>
             <li><a href="#">Tutorials</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Academics</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
