--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
-        <li><a href="style-guide.html">Style Guide</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li>
-        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Sign Up</a></li>
+        <li><a href="style-guide.html">Design System</a></li>
+        <li><a href="academics.html">Academics</a></li>
+        <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
+        <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a></li>
       </ul>
     </nav>
   </header>
