--- a/style-guide.html
+++ b/style-guide.html
@@ -20,8 +20,8 @@
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
         <li><a href="style-guide.html">Style Guide</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li>
+        <li><a href="academics.html">Academics</a></li>
+        <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
         <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Sign Up</a></li>
       </ul>
     </nav>
