edit contents and add links

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
           <ul class="blank">
             <li><a href="#">Getting Started</a></li>
             <li><a href="#">Resources</a></li>
-            <li><a href="#">Design</a></li>
+            <!-- <li><a href="#">Design</a></li> -->
             <li><a href="#">Tutorials</a></li>
-            <li><a href="#">Pricing</a></li>
+            <!-- <li><a href="#">Pricing</a></li> -->
           </ul>
         </div>
         <div class="col-one-fifth">
@@ -166,10 +166,10 @@
         <div class="col-one-fifth">
           <h6>Connect</h6>
           <ul class="blank">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Medium</a></li>
+            <!-- <li><a href="#">Twitter</a></li> -->
+            <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
+            <!-- <li><a href="#">Instagram</a></li> -->
+            <!-- <li><a href="#">Medium</a></li> -->
           </ul>
         </div>
         <div class="col-two-fifths">
