--- a/style-guide.html
+++ b/style-guide.html
@@ -658,7 +658,7 @@
           <h6>Connect</h6>
           <ul class="blank">
             <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
             <li><a href="#">Instagram</a></li>
             <li><a href="#">Medium</a></li>
           </ul>
