--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
   <title>Emanate HTML Template - Pricing</title>
@@ -148,4 +148,4 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
-</html>
+</html> -->
