--- a/academics.html
+++ b/academics.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Emanate HTML Template - Pricing</title>
+  <title>TBC</title>
   <meta charset="utf-8" />
   <meta name="description" content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
   <meta name="viewport" content="width=device-width" />
@@ -10,17 +10,45 @@
   <link rel="mask-icon" href="media/favicon.svg" color="rgb(36,38,58)" />
   <link rel="shortcut icon" href="media/favicon.png" />
   <link rel="stylesheet" href="css/main.css" />
+  <!-- To be removed after completing the tasks -->
+  <style>
+    /* When clicked on, add a background color and strike out text */
+    /* Include the padding and border in an element's total width and height */
+    
+    /* When clicked on, add a background color and strike out text */
+    ul li.checked {
+      background: #888;
+      color: #fff;
+      text-decoration: line-through;
+    }
+
+    /* Add a "checked" mark when clicked on */
+    ul li.checked::before {
+      content: '';
+      position: absolute;
+      border-color: #fff;
+      border-style: solid;
+      border-width: 0 2px 2px 0;
+      top: 10px;
+      left: 16px;
+      transform: rotate(45deg);
+      height: 15px;
+      width: 7px;
+    }
+  </style>
 </head>
 <body class="page page-pricing preload">
 
   <header class="header-main">
     <nav>
-      <a href="index.html" class="logo" rel="home"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><path d="M6.648 7.762c-.077-.11-.106-.245-.083-.376.024-.132.1-.248.21-.323l1.164-.8c1.536-1.076 3.406-1.486 5.25-1.16 3.82.673 6.373 4.32 5.704 8.113-.668 3.793-4.316 6.347-8.134 5.674-1.845-.326-3.462-1.35-4.485-2.813l-3.11-4.445c-.16-.23-.45-.33-.717-.245-.267.084-.45.33-.45.61C2 11.998 2 12 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10S17.523 2 12 2C8.94 2 6.202 3.374 4.368 5.538c-.735.86-.794 2.11-.146 3.036 1.475 2.136 4.138 5.942 4.138 5.942.675.965 1.685 1.605 2.852 1.81 2.396.424 4.684-1.168 5.107-3.564.42-2.396-1.185-4.674-3.58-5.097-1.167-.205-2.335.05-3.36.77-.84.585-1.994.38-2.58-.458l-.152-.215z" fill="currentColor" /></svg><span>Emanate</span></a>
+      <a href="index.html" class="logo" rel="home">
+        <img src="media/bg/Logo-370x370.png" alt="logo" width="" height="370">
+        <span>Taunggalay Buddhism College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
-        <li><a href="style-guide.html">Style Guide</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="style-guide.html">Design System</a></li>
+        <li><a href="academics.html">Academics</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
         <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a></li>
       </ul>
@@ -34,6 +62,15 @@
         <div class="col-one-half bg-image-02 overlay"></div>
         <div class="col-one-half middle padding">
           <div class="max-width-m">
+            <!-- To be removed after completing the tasks -->
+            <ol>
+              <li>1. </li>
+              <li class="checked"></li>
+              <li class="checked"></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
             <h1>Academics</h1>
             <p class="lead">Two-Year Degree Program</p>
             <a href="signup.html" class="button button-secondary full-width-tablet space-top" role="button">Sign Up</a>
