--- a/index.html
+++ b/index.html
@@ -164,12 +164,14 @@
           </ul>
         </div>
         <div class="col-one-fifth">
-          <h6>Connect</h6>
+          <h6>Contact TBC</h6>
           <ul class="blank">
-            <!-- <li><a href="#">Twitter</a></li> -->
+            <li><a></a>Taunggalay Buddhism College,</li>
+            <li><a>Taunggalay, Hpa-An,</a></li>
+            <li><a>Kayin State, Myanmar</a></li>
             <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
-            <!-- <li><a href="#">Instagram</a></li> -->
-            <!-- <li><a href="#">Medium</a></li> -->
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Medium</a></li>
           </ul>
         </div>
         <div class="col-two-fifths">
