add more contents

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
     </section>
 
-    <section class="bg-dark center-tablet dark padding">
+    <!-- <section class="bg-dark center-tablet dark padding">
       <div class="row max-width-l">
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-indigo dark">brightness_3</i>
@@ -136,12 +136,19 @@
           <p class="lead">With a custom framework and global classes, build consistent pages with ease.</p>
         </div>
       </div>
+    </section> -->
+
+    <section class="bg-dark center-tablet dark padding">
+      <div class="margin-bottom margin-top max-width-m">
+        <h2>About</h2>
+        <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen State of Myanmar, this two-year degree program is designed to equip Theravada monks, nuns, and laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic disciplines.</p>
+      </div>
     </section>
 
     <section class="bg-light center padding">
       <div class="margin-bottom margin-top max-width-m">
-        <h1>And... fast. Really fast.</h1>
-        <p class="lead">The main focus of this template is performance, no bloat.</p>
+        <h2>Mission and Vision</h2>
+        <p class="lead">The college's motto, "The Fruition of the Holy Path Surpasses all," encapsulates its mission to provide a transformative educational experience that empowers students to deepen their spiritual understanding while also cultivating practical skills and critical thinking abilities. The vision of Taunggalay Buddhism College is to become a leading center of excellence in the integration of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who can navigate the complexities of the modern world with compassion and wisdom.
       </div>
     </section>
 
