improve more contents

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>TBC</title>
+  <title>Taunggalay Buddhism College</title>
   <meta charset="utf-8" />
   <meta name="description" content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
   <meta name="viewport" content="width=device-width" />
@@ -65,7 +65,7 @@
           </div>
           <div class="col-one-fourth">
             <i class="feature-icons material-icons bg-gradient-indigo dark">chrome_reader_mode</i>
-            <h6>Style Guide</h6>
+            <h6>Design System</h6>
           </div>
         </div>
         <div class="row">
