--- a/academics.html
+++ b/academics.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>TBC</title>
+  <title>Taunggalay Buddhism College</title>
   <meta charset="utf-8" />
   <meta name="description" content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
   <meta name="viewport" content="width=device-width" />
