--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="description" content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
   <meta name="viewport" content="width=device-width" />
-  <link rel="apple-touch-icon-precomposed" href="media/favicon.png" />
-  <link rel="icon" href="media/favicon.png" />
-  <link rel="mask-icon" href="media/favicon.svg" color="rgb(36,38,58)" />
-  <link rel="shortcut icon" href="media/favicon.png" />
+  <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
+  <link rel="icon" href="media/favicon-tbc-logo.png" />
+  <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
+  <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body class="page page-home preload">
@@ -26,7 +26,7 @@
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
-        <li><a href="style-guide.html">Design System</a></li>
+        <!-- <li><a href="style-guide.html">Design System</a></li> -->
         <li><a href="academics.html">Academics</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
         <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a></li>
@@ -170,6 +170,7 @@
         <div class="col-one-fifth">
           <h6>Support</h6>
           <ul class="blank">
+            <li><a href="style-guide.html">Design System</a></li>
             <li><a href="#">Documentation</a></li>
             <li><a href="#">Requirements</a></li>
             <li><a href="#">License</a></li>
