--- a/style-guide.html
+++ b/style-guide.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="description" content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
   <meta name="viewport" content="width=device-width" />
-  <link rel="apple-touch-icon-precomposed" href="media/favicon.png" />
-  <link rel="icon" href="media/favicon.png" />
-  <link rel="mask-icon" href="media/favicon.svg" color="rgb(36,38,58)" />
-  <link rel="shortcut icon" href="media/favicon.png" />
+  <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
+  <link rel="icon" href="media/favicon-tbc-logo.png" />
+  <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
+  <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body class="page page-style-guide preload">
