--- a/academics.html
+++ b/academics.html
@@ -163,10 +163,8 @@
         <div class="col-one-fifth">
           <h6>Connect</h6>
           <ul class="blank">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Medium</a></li>
+            <li><a href="https://mahar.asia">Blog</a></li>
+            <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
           </ul>
         </div>
         <div class="col-two-fifths">
