--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
           <h6>Connect</h6>
           <ul class="blank">
             <!-- <li><a href="#">Twitter</a></li> -->
+            <li><a href="https://mahar.asia">Blog</a></li>
             <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
             <!-- <li><a href="#">Instagram</a></li> -->
             <!-- <li><a href="#">Medium</a></li> -->
