--- a/default-template.html
+++ b/default-template.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="description" content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
   <meta name="viewport" content="width=device-width" />
-  <link rel="apple-touch-icon-precomposed" href="media/favicon.png" />
-  <link rel="icon" href="media/favicon.png" />
-  <link rel="mask-icon" href="media/favicon.svg" color="rgb(36,38,58)" />
-  <link rel="shortcut icon" href="media/favicon.png" />
+  <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
+  <link rel="icon" href="media/favicon-tbc-logo.png" />
+  <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
+  <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body class="page page-home preload">
@@ -66,10 +66,8 @@
         <div class="col-one-fifth">
           <h6>Connect</h6>
           <ul class="blank">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Medium</a></li>
+            <li><a href="https://mahar.asia">Blog</a></li>
+            <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
           </ul>
         </div>
         <div class="col-two-fifths">
