--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
           </ul>
         </div>
         <div class="col-one-half">
-          <img class="min-width-l rounded" src="media/content/editor.png" srcset="media/content/editor.png 1x, media/content/editor@2x.png 2x" alt="Editor">
+          <img class="min-width-l rounded" src="media/content/editor.jpeg" srcset="media/content/editor.jpeg 1x, media/content/editor@2x.jpeg 2x" alt="Editor">
         </div>
       </div>
       <div class="row max-width-l">
         <div class="col-one-half">
-          <img class="min-width-l right rounded" src="media/content/sketch.png" srcset="media/content/sketch.png 1x, media/content/sketch@2x.png 2x" alt="Sketch">
+          <img class="min-width-l right rounded" src="media/content/sketch.jpeg" srcset="media/content/sketch.jpeg 1x, media/content/sketch@2x.jpeg 2x" alt="Sketch">
         </div>
         <div class="col-one-half center-tablet middle">
           <h2>Designed In Sketch</h2>
