အင်းတါင် index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
 
-    <section class="center padding">
+    <!-- <section class="center padding">
       <div class="margin-bottom max-width-m">
         <h3>Based On Modular Design</h3>
         <p class="lead">Build awesome websites or landing pages with simple and independent parts.</p>
@@ -52,7 +52,7 @@
       <div class="max-width-l">
         <div class="row margin-bottom">
           <div class="col-one-fourth">
-            <!-- <iframe src="https://mahar.asia/?p=3539" height="200" width="300" title="Iframe Example"></iframe> -->
+            <iframe src="https://mahar.asia/?p=3539" height="200" width="300" title="Iframe Example"></iframe>
             <i class="feature-icons material-icons bg-gradient-pink dark">format_shapes</i>
             <h6>Minimal Design</h6>
           </div>
@@ -88,17 +88,17 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="bg-light padding">
       <div class="row margin-bottom max-width-l">
         <div class="col-one-half center-tablet middle">
-          <h2>Custom Framework</h2>
-          <p class="lead">The code doesn't rely on any third party framework or tool. Everything is neatly organized in Sass and has been heavily focused on performances. And if you're not used to Sass, no worries, plain CSS is also available.</p>
+          <h3>Dhammapada Verse 109</h3>
+          <p class="lead"><i>For one who always respects and honours those who are older and more virtuous, four benefits, viz., longevity, beauty, happiness and strength, will increase.</i></p>
           <ul class="inline space-top">
-            <li><img src="media/logos/logo-html5.png" srcset="media/logos/logo-html5.png 1x, media/logos/logo-html5@2x.png 2x" alt="HTML5"></li>
+            <!-- <li><img src="media/logos/logo-html5.png" srcset="media/logos/logo-html5.png 1x, media/logos/logo-html5@2x.png 2x" alt="HTML5"></li>
             <li><img src="media/logos/logo-css3.png" srcset="media/logos/logo-css3.png 1x, media/logos/logo-css3@2x.png 2x" alt="CSS3"></li>
-            <li><img src="media/logos/logo-sass.png" srcset="media/logos/logo-sass.png 1x, media/logos/logo-sass@2x.png 2x" alt="Sass"></li>
+            <li><img src="media/logos/logo-sass.png" srcset="media/logos/logo-sass.png 1x, media/logos/logo-sass@2x.png 2x" alt="Sass"></li> -->
           </ul>
         </div>
         <div class="col-one-half">
@@ -110,10 +110,10 @@
           <img class="min-width-l right rounded" src="media/content/sketch.jpeg" srcset="media/content/sketch.jpeg 1x, media/content/sketch@2x.jpeg 2x" alt="Sketch">
         </div>
         <div class="col-one-half center-tablet middle">
-          <h2>Designed In Sketch</h2>
-          <p class="lead">100% of this HTML template, including all modules and components have been designed in Sketch. It's a great addition that will help you save time and work more effectively with the power of nested symbols, organized typography and shared styles.</p>
+          <!-- <h2>Designed In Sketch</h2> -->
+          <p class="lead"><i>Avoid hatred and violence and persuit gentle means; tolerance and Ahimsa leads to success.</i></p>
           <ul class="inline space-top">
-            <li><img src="media/logos/logo-sketch.png" srcset="media/logos/logo-sketch.png 1x, media/logos/logo-sketch@2x.png 2x" alt="Sketch"></li>
+            <!-- <li><img src="media/logos/logo-sketch.png" srcset="media/logos/logo-sketch.png 1x, media/logos/logo-sketch@2x.png 2x" alt="Sketch"></li> -->
           </ul>
         </div>
       </div>
