--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="index.html">Home</a></li>
         <!-- <li><a href="style-guide.html">Design System</a></li> -->
         <li><a href="academics.html">Academics</a></li>
+        <li><a href="about.html">About</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
         <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Apply Now</a></li>
       </ul>
