အင်းတါင် "Buddhism meets Science"

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="bg-image-01 center full-screen middle overlay padding">
       <div class="max-width-m">
         <h1>Taunggalay Buddhism College</h1>
-        <p class="lead">Where Science meets Buddhism</p>
+        <p class="lead">Where Buddhism meets Science</p>
         <!-- <a href="signup.html" class="button button-primary space-top" role="button">Get started, it's free!</a> -->
       </div>
     </section>
