remove words containing "vada", replace monk and nun to bhikkhu and bhikkhunī

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>About</h2>
-        <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen State of Myanmar, this two-year degree program is designed to equip Theravada monks, nuns, and laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic disciplines.</p>
+        <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic disciplines.</p>
       </div>
     </section>
 
