--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
                 <h2>About</h2>
                 <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the
                     gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen
-                    State of Myanmar, this two-year degree program is designed to equip Theravada monks, nuns, and
+                    State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and
                     laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic
                     disciplines.</p>
             </div>
