--- a/academics.html
+++ b/academics.html
@@ -49,7 +49,7 @@
     <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>Degree Program</h2>
-        <p class="lead">The two-year degree program at Taunggalay Buddhism College offers a unique curriculum that combines core courses in mathematics, English, physics, chemistry, Buddha logic, and Buddhist culture with specialized tracks in Vinaya Pitaka, Sutta Pitaka, and Abhidhamma Pitaka. This interdisciplinary approach allows students to develop a well-rounded understanding of both the theoretical and practical aspects of Theravada Buddhism, while also gaining proficiency in essential academic subjects.
+        <p class="lead">The two-year degree program at Taunggalay Buddhism College offers a unique curriculum that combines core courses in mathematics, English, physics, chemistry, Buddha logic, and Buddhist culture with specialized tracks in Vinaya Pitaka, Sutta Pitaka, and Abhidhamma Pitaka. This interdisciplinary approach allows students to develop a well-rounded understanding of both the theoretical and practical aspects of Buddhism, while also gaining proficiency in essential academic subjects.
       </div>
     </section>
 
@@ -57,7 +57,7 @@
       <div class="margin-bottom margin-top">
         <h2>Admission Requirements</h2> 
         <p class="lead">
-          Taunggalay Buddhism College welcomes applications from Theravada monks, nuns, and laypeople who have completed a certain level of Pariyatti study in Theravada Buddhism. Applicants must be between the ages of 20 and 30 and have a basic or intermediate level of English proficiency, as all instruction will be conducted in English. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.
+          Taunggalay Buddhism College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 20 and 30 and have a basic or intermediate level of English proficiency, as all instruction will be conducted in English. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.
         </p>  
       </div>
     </section>
@@ -67,7 +67,7 @@
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-indigo dark">brightness_3</i>
           <h5>Who can apply?</h5>
-          <p class="lead">Monks, nuns, and laypeople who have completed a certain level of Pariyatti study in Theravada Buddhism</p>
+          <p class="lead">Bhikkhu, bhikkhunī, and laypeople who have completed a certain level of Pariyatti study in Buddhism</p>
         </div>
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-green dark">account_circle</i>
