remove "the" from Holy Path

--- a/about.html
+++ b/about.html
@@ -292,7 +292,7 @@
         <section class="bg-light center padding">
             <div class="margin-bottom margin-top max-width-m">
                 <h2>Mission and Vision</h2>
-                <p class="lead">The college's motto, "The Fruition of the Holy Path Surpasses all," encapsulates its
+                <p class="lead">The college's motto, "The Fruition of Holy Path Surpasses all," encapsulates its
                     mission to provide a transformative educational experience that empowers students to deepen their
                     spiritual understanding while also cultivating practical skills and critical thinking abilities. The
                     vision of Taunggalay Buddhism College is to become a leading center of excellence in the integration
