--- a/academics.html
+++ b/academics.html
@@ -65,14 +65,14 @@
     <section class="bg-dark center-tablet dark padding">
       <div class="row max-width-l">
         <div class="col-one-third">
-          <i class="feature-icons material-icons bg-gradient-indigo dark">brightness_3</i>
+          <i class="feature-icons material-icons bg-gradient-indigo dark">tune</i>
           <h5>Who can apply?</h5>
           <p class="lead">Bhikkhu, bhikkhunī, and laypeople who have completed a certain level of Pariyatti study in Buddhism</p>
         </div>
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-green dark">account_circle</i>
           <h5>Age Requirements</h5>
-          <p class="lead">20-30 years old</p>
+          <p class="lead">18-25 years old</p>
         </div>
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-pink dark">tune</i>
