--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
-  <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
+  <link rel="mask-icon" href="media/favicon-tbc-logo.png" color="rgb(36,38,58)" />
   <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -150,7 +150,7 @@
     <section class="bg-light center padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>Mission and Vision</h2>
-        <p class="lead">The college's motto, "The Fruition of the Holy Path Surpasses all," encapsulates its mission to provide a transformative educational experience that empowers students to deepen their spiritual understanding while also cultivating practical skills and critical thinking abilities. The vision of Taunggalay Buddhism College is to become a leading center of excellence in the integration of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who can navigate the complexities of the modern world with compassion and wisdom.
+        <p class="lead">The college's motto, "The Fruition of Holy Path Surpasses all," encapsulates its mission to provide a transformative educational experience that empowers students to deepen their spiritual understanding while also cultivating practical skills and critical thinking abilities. The vision of Taunggalay Buddhism College is to become a leading center of excellence in the integration of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who can navigate the complexities of the modern world with compassion and wisdom.
       </div>
     </section>
 
