replace logos and urls

--- a/academics.html
+++ b/academics.html
@@ -16,7 +16,7 @@
   <header class="header-main">
     <nav>
       <a href="index.html" class="logo" rel="home">
-        <img src="media/bg/Logo-370x370.png" alt="logo" width="" height="370">
+        <img src="media/logos/logo-370x370.png" alt="logo" width="" height="370">
         <span>Taunggalay Buddhism College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
