--- a/style-guide.html
+++ b/style-guide.html
@@ -16,8 +16,8 @@
   <header class="header-main dark">
     <nav>
       <a href="index.html" class="logo" rel="home">
-        <img src="media/bg/Logo-370x370.png" alt="logo" width="" height="370">
-        <span>Taunggalay Buddhism Colelge</span></a>
+        <img src="media/logos/logo-370x370.png" alt="logo" width="" height="370">
+        <span>Taunggalay Buddhism College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
           <section id="logo">
             <h4>Logo</h4>
             <p class="paragraph">
-              <img class="right rounded" src="media/content/logo-370x370.png" srcset="media/content/logo-370x370.png 1x, media/content/logo@2x.png 2x" alt="Sketch">
+              <img class="right rounded" src="media/logos/logo-370x370.png" srcset="media/logos/logo-370x370.png 1x, media/logos/logo-370x370.png 2x" alt="Sketch">
               University Motto and Seal 
               
               “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhism College's official motto 
