--- a/academics.html
+++ b/academics.html
@@ -182,7 +182,7 @@
         </div>
       </div>
     </div>
-    <p class="copyright"><span>HTML Template by </span><a href="https://uiuxassets.com/" target="_blank">UI/UX Assets</a><span> - © 2018, all rights reserved.</span></p>
+    <p class="copyright"><span>Copyright © 2024 TBC. All rights reserved.</span></p>
   </footer>
 
   <script src="js/jquery.min.js"></script>
