update exchange programs

--- a/academics.html
+++ b/academics.html
@@ -142,13 +142,10 @@
     <div class="padding">
       <div class="row max-width-l">
         <div class="col-one-fifth">
-          <h6>Startup</h6>
+          <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="#">Getting Started</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">Tutorials</a></li>
-            <li><a href="#">Academics</a></li>
+            <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
