change `support` to `design`

--- a/style-guide.html
+++ b/style-guide.html
@@ -650,7 +650,7 @@
           </ul>
         </div>
         <div class="col-one-fifth">
-          <h6>Support</h6>
+          <h6>Design</h6>
           <ul class="blank">
             <li><a href="style-guide.html">Design System</a></li>
           </ul>
